--- a/lib/ellipse.dox
+++ b/lib/ellipse.dox
@@ -40,12 +40,31 @@
 
 /*! \class  Ellipse
  *
+ * This class constructs a simple ellipse from the given data.  Thereby, the
+ * considered ellipse is oriented in space by a normal and a tangent.
+ *
+ * The normal is the normal of the plane the ellipse is situated in.  Hence, it
+ * determines which side of the ellipse is a front face.  This information is
+ * important for optimisation techniques such as Backface Culling.
+ *
+ * The tangent of the ellipse is a vector which spans the plane the ellipse lays
+ * in.  Furthermore, the tangent acts as the ellipse's Up Vector.  This aspect
+ * is required in order to transform the ellipse properly.
+ *
+ *
+ *
  * \brief   A simple ellipse class.
  */
 
 
 
 /*! \def    __ELLIPSE_HPP__
+ *
+ * In order to prevent unintended side effects when including this header
+ * mulitple times, this define is utilised such that its header is included at
+ * most once.
+ *
+ *
  *
  * \brief   Ensuring this header being included just once.
  */
@@ -65,27 +84,35 @@
  *                              , const float nz
  *                              )
  *
- * \brief   Construct a new ellipse from the given data.
- *
- * \param   r   This ellipse's radius.
- * \param   e   This ellipse's excentricity.
- * \param   cx  This ellipse's centre's x coordinate.
- * \param   cy  This ellipse's centre's y coordinate.
- * \param   cz  This ellipse's centre's z coordinate.
- * \param   tx  This ellipse's tangent's x component.
- * \param   ty  This ellipse's tangent's y component.
- * \param   tz  This ellipse's tangent's z component.
- * \param   nx  This ellipse's normal's x component.
- * \param   ny  This ellipse's normal's y component.
- * \param   nz  This ellipse's normal's z component.
+ * \brief       Construct a new ellipse from the given data.
+ * \copydetails Ellipse
+ * \param       r   This ellipse's radius.
+ * \param       e   This ellipse's excentricity.
+ * \param       cx  This ellipse's centre's x coordinate.
+ * \param       cy  This ellipse's centre's y coordinate.
+ * \param       cz  This ellipse's centre's z coordinate.
+ * \param       tx  This ellipse's tangent's x component.
+ * \param       ty  This ellipse's tangent's y component.
+ * \param       tz  This ellipse's tangent's z component.
+ * \param       nx  This ellipse's normal's x component.
+ * \param       ny  This ellipse's normal's y component.
+ * \param       nz  This ellipse's normal's z component.
  */
 
 /*! \fn     vector <float> Ellipse :: eval (const float t)
  *
+ * The considered ellipse can act as the movement curve for mathematical objects
+ * such as spheres.  Therefore, the object to move is assumed to be situated on
+ * the current ellipse which, hence, needs to be evaluated in order to receive a
+ * position vector.
+ *
+ * Since the ellipse is assumed to be parametrised by time, this method needs to
+ * be called with the point of time for which the ellipse shall be evaluated.
+ *
+ *
+ *
  * \brief   Evaluate this ellipse for a given point of time.
- *
  * \param   t   The point of time to evaluate this ellipse for.
- *
  * \return  The curve point for the considered point of time.
  */
 
