--- a/lib/ellipse.dox
+++ b/lib/ellipse.dox
@@ -111,7 +111,7 @@
  * \param   nz  This ellipse's normal's z component.
  */
 
-/*! \fn     vector <float> Ellipse :: eval (const float t)
+/*! \fn     vector <float> Ellipse :: eval (const float t, const float offset)
  *
  * The considered ellipse can act as the movement curve for mathematical objects
  * such as spheres.  Therefore, the object to move is assumed to be situated on
@@ -120,12 +120,17 @@
  *
  * Since the ellipse is assumed to be parametrised by time, this method needs to
  * be called with the point of time for which the ellipse shall be evaluated.
+ * Using an `offset`, this evaluation can be delayed as required.
  *
  *
  *
  * \brief   Evaluate this ellipse for a given point of time.
- * \param   t   The point of time to evaluate this ellipse for.
+ * \param   t       The point of time to evaluate this ellipse for.
+ * \param   offset  The temporal offset for the evaluation.
  * \return  The curve point for the considered point of time.
+ */
+
+/*! \overload   vector <float> Ellipse :: eval (const float t)
  */
 
 /******************************************************************************/
